# fynd

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  release.config.js  worker_pools.toml
.cargo/: audit.toml
.claude/: CODEBASE.md
.claude/knowledge/: rust.md
.claude/skills/run-ci/: SKILL.md
.github/workflows/: ci.yaml  nightly-canary.yaml  semver-check.yaml
clients/: CLAUDE.md  openapi.json
clients/rust/examples/: swap_client_fee.rs  swap_erc20.rs  swap_permit2.rs
clients/rust/src/: client.rs  lib.rs  mapping.rs  types.rs
clients/typescript/client/: package.json
clients/typescript/client/src/: schema.d.ts
docs/: ARCHITECTURE.md  README.md  SUMMARY.md
docs/algorithms/: README.md  bellman-ford.md  most-liquid.md  path-frank-wolfe.md
docs/get-started/quickstart/: README.md
docs/guides/: client-fees.md  custom-algorithm.md  encoding-options.md  price-guard.md  router-fees.md  server-configuration.md
docs/reference/: benchmark-results.md
fixtures/integration/: README.md  golden_outputs.json  market_recording.json.zst
fynd-core/: CLAUDE.md  Cargo.toml
fynd-core/examples/: custom_algorithm.rs
fynd-core/src/: lib.rs  solver.rs
fynd-core/src/algorithm/: bellman_ford.rs  mod.rs  most_liquid.rs  path_frank_wolfe.rs  pfw_e2e_tests.rs  split_primitives.rs  split_test_harness.rs  test_utils.rs
fynd-core/src/derived/: computation.rs  manager.rs  mod.rs
fynd-core/src/derived/computations/: pool_depth.rs  spot_price.rs  token_gas_price.rs
fynd-core/src/encoding/: encoder.rs  fee_fetcher.rs  mod.rs  router_fees.rs
fynd-core/src/feed/: events.rs  gas.rs  market_data.rs  mod.rs  protocol_registry.rs  tycho_feed.rs
fynd-core/src/graph/: mod.rs  petgraph.rs
fynd-core/src/price_guard/: binance_ws.rs  config.rs  guard.rs  hyperliquid.rs  provider.rs
fynd-core/src/recording/: golden.rs  mod.rs  types.rs
fynd-core/src/types/: constants.rs  internal.rs  mod.rs  quote.rs
fynd-core/src/worker_pool/: pool.rs  registry.rs  task_queue.rs  worker.rs
fynd-core/src/worker_pool_router/: mod.rs
fynd-core/tests/: integration.rs
fynd-core/tests/fixtures/: expected_outputs.json  market_recording.json.zst
fynd-core/tests/integration/: README.md  derived_data_tests.rs  harness.rs  solution_tests.rs  timing_tests.rs
fynd-rpc/: CLAUDE.md
fynd-rpc-types/: CLAUDE.md
fynd-rpc-types/src/: lib.rs
fynd-rpc/src/: builder.rs  config.rs  lib.rs  protocols.rs
fynd-rpc/src/api/: dto.rs  handlers.rs  mod.rs
src/: cli.rs  main.rs
src/commands/: derive_connector_tokens.rs  mod.rs
test-fixtures/: Cargo.toml
test-fixtures/src/: expected.rs  lib.rs  recording.rs  scenarios.rs
tests/: e2e_quote.rs
tools/: CLAUDE.md
tools/benchmark/: Cargo.toml
tools/benchmark/src/: compare.rs  scale.rs
tools/erc20-overrides/: Cargo.toml
tools/erc20-overrides/src/: lib.rs
tools/fynd-gas-audit/: Cargo.toml  README.md  single_hops.toml
tools/fynd-gas-audit/src/: cost.rs  main.rs  quoter.rs  report.rs  sampler.rs  simulator.rs  types.rs
tools/fynd-swap-cli/: Cargo.toml
tools/fynd-swap-cli/src/: main.rs
tools/record-market/: Cargo.toml  README.md
tools/record-market/src/: expected.rs  golden.rs  main.rs  recorder.rs
