[package]
name = "fynd-gas-audit"
version.workspace = true
edition = "2021"
description = "One-shot audit of Fynd's gas_estimate vs. actual on-chain gas usage"
license = "MIT"

[dependencies]
# Fynd integration
fynd-client = { workspace = true }

# Async + HTTP
tokio = { workspace = true }
reqwest = { workspace = true }

# Ethereum + state overrides
alloy = { workspace = true, features = ["providers", "provider-http", "rpc-types-eth"] }
bytes = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }

# CLI + logging
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Errors + serialization
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Sampling + CSV
fastrand = "2"
csv = "1.3"

[dev-dependencies]
tempfile = "3"
