[package]
name = "record-market"
version.workspace = true
edition = "2021"
description = "Capture Tycho market state for integration testing"

[dependencies]
fynd-core.workspace = true
fynd-test-fixtures.workspace = true
tycho-simulation.workspace = true
tokio = { workspace = true, features = ["full"] }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow.workspace = true
tokio-stream.workspace = true
num-bigint.workspace = true
sha2 = "0.10"
toml.workspace = true
